--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,7 @@ if(USE_SYCL_ACPP OR USE_SYCL_ICPX)
     message(STATUS "src: Adding SYCL specific sources to lib${PROJECT_NAME}")
     list(APPEND LIB_SOURCES
         Backend/SYCL/SYCLManager.cpp
-        Backend/Proxy_sycl.cpp
+        Backend/SYCL/Proxy_sycl.cpp
         #Simulation/Integrator/IntegratorSYCL.cpp
         #Simulation/Interactions/ExampleForceSYCL.cpp
         # Add any other SYCL-specific .cpp files here
