--- a/src/Tests/CMakeLists.txt
+++ b/src/Tests/CMakeLists.txt
@@ -13,91 +13,86 @@ list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
 include(Catch) # contains some cmake macros that will help with discovery of tests
 include(CTest)
 
-# Only create the test executable if we have at least one backend
-if(USE_CUDA OR USE_METAL OR USE_SYCL)
-    add_executable("arbd_tests")
-    
-    # Conditionally add Metal test file
-    if(USE_METAL AND APPLE)
-        target_sources(arbd_tests PRIVATE
-            test_metal.mm
-        )
-        target_include_directories(arbd_tests PRIVATE
-            ${CMAKE_CURRENT_SOURCE_DIR}/../
-        )
-        message(STATUS "Added Metal tests (test_metal.mm) to arbd_tests")
-        # Link against the main library to get access to Metal manager
-        target_link_libraries(arbd_tests PRIVATE libarbd)
-        message(STATUS "Added Metal framework support to arbd_tests")
-    elseif(USE_METAL)
-        message(WARNING "USE_METAL is ON but not on Apple platform - Metal tests will be excluded")
-    endif()
 
-    # Conditionally add SYCL test file
-    if(USE_SYCL)
-        target_sources("arbd_tests" PRIVATE test_sycl.cpp)
-        message(STATUS "Added SYCL tests to arbd_tests")
-    endif()
-    if(USE_CUDA)
-        target_sources("arbd_tests" PRIVATE
-            matrix3.cu
-            vector3_precision.cu
-            bitmask.cu
-            array.cu)
-    endif()
-
-set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --extended-lambda")
-
-target_include_directories(arbd_tests PRIVATE ${CMAKE_SOURCE_DIR}/src)
-target_link_libraries("arbd_tests" PRIVATE "lib${PROJECT_NAME}" Catch2::Catch2WithMain)
-
-## Add optional libraries
+# Common libraries and include directories for all tests
+set(COMMON_TEST_LIBS "lib${PROJECT_NAME}" Catch2::Catch2WithMain)
 if(USE_CUDA)
-  target_link_libraries(arbd_tests PUBLIC curand)
+    list(APPEND COMMON_TEST_LIBS curand)
 endif()
 if(USE_NCCL)
-  target_link_libraries(arbd_tests PUBLIC nccl)
-endif()
-if(USE_NVTX)
-  target_link_libraries(arbd_tests PUBLIC nvToolsExt)
+    list(APPEND COMMON_TEST_LIBS nccl)
 endif()
 
+# Metal Tests
+if(USE_METAL AND APPLE)
+    add_executable(arbd_test_metal test_metal.mm)
+    target_include_directories(arbd_test_metal PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
+    target_link_libraries(arbd_test_metal PRIVATE ${COMMON_TEST_LIBS} ${METAL_FRAMEWORK} ${FOUNDATION_FRAMEWORK})
+    catch_discover_tests(arbd_test_metal)
+    install(TARGETS arbd_test_metal)
+    message(STATUS "Added Metal test executable: arbd_test_metal")
+elseif(USE_METAL)
+    message(WARNING "USE_METAL is ON but not on Apple platform - Metal tests will be excluded")
+endif()
+
+# SYCL Tests
 if(USE_SYCL_ACPP OR USE_SYCL_ICPX)
-  # SYCL runtime linking is usually handled automatically by the SYCL compiler
-  # but we ensure the SYCL definitions are available
-  target_compile_definitions(arbd_tests PRIVATE PROJECT_USES_SYCL)
-  if(USE_SYCL_ACPP)
-    target_compile_definitions(arbd_tests PRIVATE PROJECT_USES_SYCL_ACPP)
-    # Link OpenMP for AdaptiveCpp
-    if(OpenMP_CXX_FOUND)
-      target_link_libraries(arbd_tests PRIVATE OpenMP_Custom)
-      message(STATUS "Linked custom OpenMP to arbd_tests for AdaptiveCpp backend")
+    # Test for test_sycl.cpp
+    add_executable(arbd_test_sycl test_sycl.cpp)
+    target_include_directories(arbd_test_sycl PRIVATE ${CMAKE_SOURCE_DIR}/src)
+    target_link_libraries(arbd_test_sycl PRIVATE ${COMMON_TEST_LIBS})
+    catch_discover_tests(arbd_test_sycl)
+    install(TARGETS arbd_test_sycl)
+    message(STATUS "Added SYCL test executable: arbd_test_sycl")
+
+    # Test for test_sycl_omp.cpp
+    add_executable(arbd_test_sycl_omp test_sycl_omp.cpp)
+    target_include_directories(arbd_test_sycl_omp PRIVATE ${CMAKE_SOURCE_DIR}/src)
+    target_link_libraries(arbd_test_sycl_omp PRIVATE ${COMMON_TEST_LIBS})
+    catch_discover_tests(arbd_test_sycl_omp)
+    install(TARGETS arbd_test_sycl_omp)
+    message(STATUS "Added SYCL OMP test executable: arbd_test_sycl_omp")
+endif()
+
+# CUDA Tests
+if(USE_CUDA)
+    add_executable(arbd_test_cuda 
+        matrix3.cu
+        vector3_precision.cu
+        bitmask.cu
+        array.cu
+    )
+    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --extended-lambda")
+    target_include_directories(arbd_test_cuda PRIVATE ${CMAKE_SOURCE_DIR}/src)
+    target_link_libraries(arbd_test_cuda PRIVATE ${COMMON_TEST_LIBS})
+    catch_discover_tests(arbd_test_cuda)
+    install(TARGETS arbd_test_cuda)
+    message(STATUS "Added CUDA test executable: arbd_test_cuda")
+endif()
+
+if(USE_MPI)
+    add_executable(arbd_test_mpi mpitest.cpp)
+    target_include_directories(arbd_test_mpi PRIVATE ${CMAKE_SOURCE_DIR}/src)
+    target_link_libraries(arbd_test_mpi PRIVATE ${COMMON_TEST_LIBS})
+    
+    # Ensure MPI test uses only CXX, not CUDA compiler
+    set_target_properties(arbd_test_mpi PROPERTIES
+        LINKER_LANGUAGE CXX
+        CUDA_SEPARABLE_COMPILATION OFF
+        CUDA_RESOLVE_DEVICE_SYMBOLS OFF
+    )
+    
+    # Explicitly set this as a CXX-only target to avoid CUDA flag inheritance
+    set_source_files_properties(mpitest.cpp PROPERTIES LANGUAGE CXX)
+    
+    # Fix C++ standard library linking issues (same as main executable)
+    if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+        target_link_libraries(arbd_test_mpi PRIVATE -Wl,--whole-archive stdc++ -Wl,--no-whole-archive)
+        target_link_libraries(arbd_test_mpi PRIVATE gcc_s gcc m pthread dl)
+        target_link_options(arbd_test_mpi PRIVATE -Wl,--no-as-needed)
     endif()
-  endif()
-  if(USE_SYCL_ICPX)
-    target_compile_definitions(arbd_tests PRIVATE PROJECT_USES_SYCL_ICPX)
-  endif()
-  message(STATUS "Added SYCL support to arbd_tests")
-endif()
-
-if(USE_METAL)
-  # Metal runtime linking is handled automatically on macOS
-  # but we ensure the Metal definitions are available
-  target_compile_definitions(arbd_tests PRIVATE USE_METAL)
-  find_library(METAL_FRAMEWORK Metal)
-  find_library(FOUNDATION_FRAMEWORK Foundation)
-  if(METAL_FRAMEWORK AND FOUNDATION_FRAMEWORK)
-    target_link_libraries(arbd_tests PRIVATE ${METAL_FRAMEWORK} ${FOUNDATION_FRAMEWORK})
-    message(STATUS "Added Metal framework support to arbd_tests")
-  else()
-    message(WARNING "Metal or Foundation framework not found")
-  endif()
-endif()
-
-    ## catch_discover_tests("${PROJECT_NAME}_TESTS")
-
-    catch_discover_tests(arbd_tests)
-    install(TARGETS arbd_tests)
-else()
-    message(STATUS "No backends enabled - skipping test executable")
+    
+    catch_discover_tests(arbd_test_mpi)
+    install(TARGETS arbd_test_mpi)
+    message(STATUS "Added MPI test executable: arbd_test_mpi")
 endif()
